// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`color default 1`] = `
<span
  className="ant-tag ant-tag-default"
  style={
    Object {
      "backgroundColor": undefined,
    }
  }
>
  default
</span>
`;

exports[`color warning 1`] = `
<span
  className="ant-tag ant-tag-warning"
  style={
    Object {
      "backgroundColor": undefined,
    }
  }
>
  warning
</span>
`;

exports[`custom color 1`] = `
<span
  className="ant-tag ant-tag-has-color"
  style={
    Object {
      "backgroundColor": "#f50",
    }
  }
>
  custom color
</span>
`;

exports[`renders color error 1`] = `
<span
  className="ant-tag ant-tag-error"
  style={
    Object {
      "backgroundColor": undefined,
    }
  }
>
  error
</span>
`;

exports[`renders color processing 1`] = `
<span
  className="ant-tag ant-tag-processing"
  style={
    Object {
      "backgroundColor": undefined,
    }
  }
>
  processing
</span>
`;

exports[`renders color success 1`] = `
<span
  className="ant-tag ant-tag-success"
  style={
    Object {
      "backgroundColor": undefined,
    }
  }
>
  success
</span>
`;

exports[`renders default 1`] = `
<span
  className="ant-tag"
  style={
    Object {
      "backgroundColor": undefined,
    }
  }
>
  success
</span>
`;
